...
    Column(modifier = modifier) {
        MySearchBar(query = query, onQueryChange = onQueryChange)
        if (movies.isEmpty()) {
            EmptyContent(
                contentText = stringResource(R.string.data_movie_not_found),
                modifier = Modifier
                    .testTag("empty_data")
            )
        } else {
            MovieList(
                movies = movies,
                onWatchlistIconClick = onWatchlistIconClick,
                navigateToDetail = navigateToDetail
            )
        }
    }
...
