...
            modifier = Modifier
                .padding(8.dp)
                .size(24.dp)
                .clickable {
                    onWatchlistIconClick(id, !isWatchlist)
                }
                .testTag("watchlist_icon")
        )
    }
}

@Preview(showBackground = true, backgroundColor = 0xFFCE93D8)
@Composable
...
