...
            modifier = Modifier
                .padding(end = 16.dp, top = 8.dp)
                .align(Alignment.TopEnd)
                .clip(CircleShape)
                .size(40.dp)
                .background(Color.White)
                .testTag("add_remove_watchlist")
        ) {
            Icon(
                painter = if (!movie.isWatchlist)
                    painterResource(id = R.drawable.baseline_bookmark_border_24)
                else
                    painterResource(id = R.drawable.baseline_bookmark_24),
...
